@@ -6,6 +6,8 @@ Yakuake::Sessions - Session Manager for the Yakuake Terminal Emulator
 
 This documents version v0.13.$Rev: 1 $ of [Yakuake::Sessions](https://metacpan.org/pod/Yakuake::Sessions)
 
+[![CPAN version](https://badge.fury.io/pl/Yakuake-Sessions.svg)](http://badge.fury.io/pl/Yakuake-Sessions)
+
 # Synopsis
 
     # To reduce typing define some shell aliases
